새로운 build 파일 생성 후 deploy함

--- a/package.json
+++ b/package.json
@@ -41,5 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://hightuv.github.io/movie_app_2021/"
+  "homepage": "https://hightuv.github.io/movie_app_2021"
 }
